frontend problem solved

--- a/blog-inner.html
+++ b/blog-inner.html
@@ -150,7 +150,7 @@
 		<section class="bg-w pd-v-50">
 			
 			<!--rwd width limited-->
-			<div class="rwd-width-limited clearfix">
+			<div class="rwd-width-limited clearfix blog-rwd">
 				
 				<div class="grid-3-2  grid3-21">
 					
