Fix : Visual link / Product radio button

--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
 		<ul class="slides">
 		
 			<li class="relative">
-				<img src="images/tmp/index-v-1.jpg" class="v-centerimg" alt="" />
+				<a href="#" class="visual-link" hov="0.92"><img src="images/tmp/index-v-1.jpg" class="v-centerimg" alt="" /></a>
 			</li>
 			
 			<li class="relative">
-				<img src="images/tmp/index-v-2.jpg" class="v-centerimg" alt="" />
+				<a href="#" class="visual-link" hov="0.92"><img src="images/tmp/index-v-2.jpg" class="v-centerimg" alt="" /></a>
 			</li>
 			
 		</ul>
