--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -247,7 +247,7 @@
 																
 									<div class="info">
 										<h3 class="product-name">PIPE - T1 多功能多功能防水後背包</h3>
-										<p class="product-color">黑 <span class="product-color-hex" style="background:#000;"></span></p>
+										<p class="product-color">藍黑 <span class="product-color-hex" style="background:url(images/tmp/111111.jpg) !important;"></span></p>
 										<p class="product-price">NT$5290</p>
 									</div>
 
