checkout discount price

--- a/checkout-2.html
+++ b/checkout-2.html
@@ -371,9 +371,10 @@
 							
 							<div class="tright">
 							
-								<p class="scart-total-price-s mg-b-10"><span>運費</span>NT$100</p>
-								<p class="scart-total-price-s mg-b-10"><span>小計</span>NT$7290</p>
-								<p class="scart-total-price mg-b-40"><span>總計</span>NT$7390</p>
+								<p class="scart-total-price-s mg-b-10"><span class="color-gray-333">小計 </span>NT$7290</p>
+								<p class="scart-total-price-s mg-b-10"><span class="color-gray-333">折扣碼 </span>celia05<span class="mg-l-10 color-red">-NT$7290</span></p>
+								<p class="scart-total-price-s mg-b-10"><span class="color-gray-333">運費 </span>NT$100</p>
+								<p class="scart-total-price mg-b-40"><span class="color-gray-333">總計 </span>NT$7290</p>
 
 								<div class="scart-submit">
 
