--- a/index.html
+++ b/index.html
@@ -191,15 +191,15 @@
 	<!--end header-->
 	
 	<!--visual-->
-	<div class="flexslider f_index" style="width:100%;overflow:hidden;margin-bottom:0;">
+	<div class="flexslider f_index" style="width:100%;overflow:hidden;">
 		<ul class="slides">
 		
 			<li class="relative">
-				<a href="#" class="visual-link" hov="0.92"><img src="images/tmp/index-v-1.jpg" class="v-centerimg" alt="" /></a>
+				<a href="#" class="visual-link" hov="0.92"><img src="images/tmp/thumb_111.jpg" class="v-centerimg" alt="" /></a>
 			</li>
 			
 			<li class="relative">
-				<a href="#" class="visual-link" hov="0.92"><img src="images/tmp/index-v-2.jpg" class="v-centerimg" alt="" /></a>
+				<a href="#" class="visual-link" hov="0.92"><img src="images/tmp/thumb_2.jpg" class="v-centerimg" alt="" /></a>
 			</li>
 			
 		</ul>
@@ -213,7 +213,7 @@
 		<section>
 			
 			<!--rwd width limited-->
-			<div class="clearfix">
+			<div class="clearfix index-pnav">
 				
 				<!--index product classify-->
 				<a href="#" class="one-ipc grid-3-1">
